<resources>
    <string name="app_name">FitWebAppClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_users">All Users</string>


    <string name="login_page_password">Password</string>
    <string name="login_page_login">Login</string>
    <string name="login_page_email">Email</string>

    <string name="login_page_sign_in_button">Sign In</string>
    <string name="login_page_sign_up_button">Sign Up</string>

    <string name="alert_wrong_user_data_title">Logging fail</string>
    <string name="alert_wrong_user_data_describe">Wrong user login or password!</string>

    <string name="progress_dialog_describe">Please wait...</string>
    <string name="progress_dialog_title">Loading data</string>

    <string name="user_register_success">User registered successfully</string>
    <string name="error_empty_field">Empty field!</string>
    <string name="admin_add_user_random_password_button">Random Password</string>
    <string name="admin_add_new_user">Register New User</string>
    <string name="admin_add_new_user_is_admin">is Administrator?</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="admin_header_all_courses">All Courses</string>
    <string name="admin_header_all_users">"All Users "</string>
    <string name="admin_course_name">Course Name</string>
    <string name="admin_course_description">Course Description</string>
    <string name="admin_step_name">Step name</string>
    <string name="admin_step_description">Step Description</string>
    <string name="admin_step_number">Step number</string>
    <string name="admin_add_new_step">Add new step</string>
    <string name="step_updated">Step updated on server</string>
    <string name="step_update_fail">Step update fail</string>
    <string name="create_new_step">Create new step</string>
    <string name="photo_is_null">Photo can\'t be empty</string>
    <string name="admin_remove_step_button">Remove this step</string>
    <string name="update_this_step">Update this step</string>
    <string name="create_new_course">Create new course</string>
    <string name="add_new_course">Add new course</string>
    <string name="course_is_exist">Course already exist</string>
    <string name="update_this_course">Update this course</string>
    <string name="course_updated_successfully">Course updated successfully</string>
    <string name="steps_number">"Steps count: "</string>
    <string name="menu_all_courses">All courses</string>
    <string name="nav_menu_my_courses">My courses</string>
    <string name="nav_all_available_courses">Available courses</string>
    <string name="say_hello">"Hey, "</string>
    <string name="user_ask_wanna_join_to_course">Are you sure that you wanna join to this course?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_assigned_to_course">"User assigned to course "</string>
    <string name="unassign_user_from_course">"User removed course"</string>
    <string name="user_no_available_for_user">There is no available courses for you</string>
    <string name="user_dont_have_courses">You don\'t have any assigned courses</string>
    <string name="menu_bmi_calculator">BMI Calculator</string>
    <string name="bmi_calculator_height">Height (cm)</string>
    <string name="bmi_calculator_weight">Weight (kg)</string>
    <string name="save">Save data</string>
    <string name="user_bmi_saved">User BMI saved on server!</string>
    <string name="calc_for_me_bmi">Calc BMI</string>
    <string name="bmi_status_UnderWeight">Under Weight</string>
    <string name="bmi_status_ovrWeight">Overweight</string>
    <string name="bmi_status_obese">"Obese "</string>
    <string name="bmi_status_normal">Normal</string>
    <string name="menu_bmi_analyzer">BMI analyzer</string>
    <string name="bmi_status">"Status: "</string>
    <string name="action_log_out">Sign out</string>
    <string name="bmi_analyzer_no_data">"There is no data to despley "</string>


</resources>