<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminmain.ui.allcourses.managecourse.ui.managestep.ManageStepFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/step_image_button"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_admin_step_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_library_books_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/admin_step_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_admin_step_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/ic_baseline_description_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/admin_step_description" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_admin_step_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    app:startIconDrawable="@drawable/ic_baseline_numbers_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:hint="@string/admin_step_number"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_admin_create_step"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/admin_add_new_step"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_admin_delete_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="35dp"
                android:layout_weight="1"
                android:backgroundTint="#FB0303"
                android:text="@string/admin_remove_step_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>