<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermain.MainUserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_bmi_calculator_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_height_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:inputType="number"
                android:hint="@string/bmi_calculator_height" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_bmi_calculator_weight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_baseline_monitor_weight_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789."
                android:hint="@string/bmi_calculator_weight"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bmi_calculator_date_picker"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:layout_gravity="center"
            android:text="date"
            android:textColor="@color/teal_200" />

        <Button
            android:id="@+id/bmi_calculator_calc_me_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_for_me_bmi" />

        <Button
            android:id="@+id/bmi_calculator_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <TextView
            android:id="@+id/bmi_calculator_status"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"

            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/bmi_calculator_value"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"

            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:text="TextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>